--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-	<link href = "first-website\styles\style.css" rel="stylesheet" />
+	<link href = "first-website/styles/style.css" rel="stylesheet" />
 	
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Edu+NSW+ACT+Cursive:wght@400..700&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <script async src="first-website\scripts\main.js"></script>
+    <script async src="first-website/scripts/main.js"></script>
 
   </head>
   <body>
   <!-- 4 heading levels: -->
 <h1>Mozilla is cool.....</h1>
-    <img src="first-website\images\firefox-icon.png" alt="The Firefox Image is displayed" />
+    <img src="first-website/images/firefox-icon.png" alt="The Firefox Image is displayed" />
 	
 	<p>At Mozilla, we're a global community of</p>
 	
